--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "@babel/preset-react": "^7.14.5",
     "@davatar/react": "^1.8.1",
     "@ethersproject/experimental": "^5.5.0",
+    "@gnosis.pm/safe-apps-web3-react": "^0.6.7",
     "@types/react": "^17.0.17",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.3.2",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
     "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
+    "@web3-react/walletconnect-connector": "^6.2.8",
     "autoprefixer": "^10.3.1",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.2.0",
@@ -38,6 +41,7 @@
     "html-webpack-plugin": "^5.3.2",
     "json-loader": "^0.5.7",
     "mini-css-extract-plugin": "^2.2.0",
+    "ms.macro": "^2.0.0",
     "postcss": "^8.3.6",
     "postcss-loader": "^6.1.1",
     "process": "^0.11.10",
@@ -47,6 +51,7 @@
     "style-loader": "^3.2.1",
     "ts-loader": "^9.2.5",
     "typescript": "^4.3.5",
+    "ua-parser-js": "^1.0.2",
     "webpack": "^5.48.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^4.0.0",
@@ -57,6 +62,7 @@
     "@polkadot/extension-dapp": "^0.39.3",
     "@polkadot/react-identicon": "^0.85.3",
     "@polkadot/util": "^7.2.1",
+    "@reduxjs/toolkit": "^1.7.1",
     "ahooks": "^3.0.1",
     "antd": "^4.16.13",
     "assert": "^2.0.0",
@@ -66,12 +72,13 @@
     "crypto-browserify": "^3.12.0",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hooks-identicons": "^1.0.3",
+    "react-redux": "^7.2.6",
     "sass-resources-loader": "^2.2.4",
     "starks_proofgen": "file:wasm",
-    "store": "^2.0.12",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "web3": "^1.6.1"
