--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-dom": "^17.0.2",
     "react-hooks-identicons": "^1.0.3",
     "react-redux": "^7.2.6",
+    "react-spring": "^9.3.3",
     "sass-resources-loader": "^2.2.4",
     "starks_proofgen": "file:wasm",
     "stream-browserify": "^3.0.0",
