--- a/package.json
+++ b/package.json
@@ -35,15 +35,20 @@
     "css-loader": "^6.2.0",
     "css-minimizer-webpack-plugin": "^3.0.2",
     "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-loader": "^4.0.2",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "html-webpack-plugin": "^5.3.2",
     "json-loader": "^0.5.7",
     "mini-css-extract-plugin": "^2.2.0",
     "ms.macro": "^2.0.0",
     "postcss": "^8.3.6",
     "postcss-loader": "^6.1.1",
+    "prettier": "^2.5.1",
     "process": "^0.11.10",
+    "react-feather": "^2.0.9",
     "react-router-dom": "^6.0.2",
     "sass": "^1.37.5",
     "sass-loader": "^12.1.0",
