fix(page): add card style of proof

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,6 @@
         "moduleResolution": "node",
         "allowSyntheticDefaultImports": true
     },
-    "exclude": ["node_modules", "dist"]
+    "exclude": ["node_modules", "dist"],
 }
   
