--- a/package.json
+++ b/package.json
@@ -81,8 +81,10 @@
     "react-dom": "^17.0.2",
     "react-hooks-identicons": "^1.0.3",
     "react-redux": "^7.2.6",
+    "react-slick": "^0.29.0",
     "react-spring": "^9.3.3",
     "sass-resources-loader": "^2.2.4",
+    "slick-carousel": "^1.8.1",
     "starks_proofgen": "file:wasm",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
