--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "classnames": "^2.3.1",
     "crypto-browserify": "^3.12.0",
     "https-browserify": "^1.0.0",
+    "lodash": "^4.17.21",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "react": "^17.0.2",
