--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -59,6 +59,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm i
       - run: npm run build --if-present
+      - run: ls -l ${{ github.workspace }}
       - uses: appleboy/scp-action@master
         with:
           username: ubuntu
