--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -57,7 +57,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm i
+      - run: npm install
       - run: npm run build --if-present
       - run: ls -l ${{ github.workspace }}
       - uses: appleboy/scp-action@master
